# OpenSafe

./: .env  .eslintrc.json  .gitattributes  .gitignore  .gitlanguages  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  FIXES_SUMMARY.md  LICENSE  Makefile  OpenSafe.txt  PRODUCTION_READY.md  PRODUCTION_STATUS_REPORT.md  README.md  REPOSITORY_STATUS.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  stack.yml  tsconfig.json
.github/: repository-topics.md
.github/workflows/: ci.yml  deploy.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
gateway/: Dockerfile  main.py
monitoring/: prometheus.yml
native/: Cargo.toml  build.rs  safety_analysis.h
native/src/: comprehensive_showcase.rs  interpretability.rs  lib.rs  safety.rs
scripts/: benchmark.sh  build.sh  comprehensive-test.sh  curl-format.txt  deploy.sh  docker-setup.sh  memory-benchmark.js  memory-leak-test.js  setup.sh  test-all.js  test.sh  verify-research.sh
src/: server.ts
src/cli/: index.ts
src/config/: constants.ts  index.ts  settings.py
src/demo/: typescript-showcase.ts
src/integrations/: fastapi-bridge.py  openai-agents-sdk.ts
src/middleware/: validation.ts
src/models/: database.ts  schemas.ts  types.ts
src/safety/: analyzer.ts  constitutional.ts  rust_bridge.ts
src/services/: RealtimeService.ts  audit.service.ts  index.ts  monitoring.service.ts  openai.service.ts  policy.service.ts  research.service.ts  safety.service.ts  user.service.ts
src/utils/: errors.ts  logger.ts  metrics.ts
(+64 files in other folders)
