[package]
name = "safety_analysis"
version = "1.0.0"
edition = "2021"
description = "High-performance AI safety analysis library"
license = "MIT"
authors = ["OpenVault Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
once_cell = "1.19"
regex = "1.10"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }

# Math and ML libraries
ndarray = "0.15"
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
ml = ["candle-core", "candle-nn", "candle-transformers"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 